--- a/about.html
+++ b/about.html
@@ -5,122 +5,238 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Diagoona - About Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
+    <title>Business Oriented HTML Template</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" /> <!-- https://fonts.google.com/ -->    
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
-    <link href="css/templatemo-diagoona.css" rel="stylesheet" />
+    <link href="css/templatemo-business-oriented.css" rel="stylesheet" />
+</head>
 <!--
 
-TemplateMo 550 Diagoona
+TemplateMo 549 Business Oriented
 
-https://templatemo.com/tm-550-diagoona
+https://templatemo.com/tm-549-business-oriented
 
 -->
-</head>
-
 <body>
-    <div class="tm-container">        
-        <div>
-            <div class="tm-row pt-4">
-                <div class="tm-col-left">
-                    <div class="tm-site-header media">
-                        <i class="fas fa-umbrella-beach fa-3x mt-1 tm-logo"></i>
-                        <div class="media-body">
-                            <h1 class="tm-sitename text-uppercase">diagoona</h1>
-                            <p class="tm-slogon">new bootstrap template</p>
-                        </div>        
+    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/biz-oriented-header.jpg">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="tm-logo">
+                        <i class="fas fa-industry fa-5x mr-5"></i>
+                        <span class="text-uppercase tm-logo-text">Business Oriented</span>
                     </div>
                 </div>
-                <div class="tm-col-right">
+            </div>
+        </div>
+    </div>
+    <div class="tm-nav-container-outer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
                     <nav class="navbar navbar-expand-lg" id="tm-main-nav">
-                        <button class="navbar-toggler toggler-example mr-0 ml-auto" type="button" 
-                            data-toggle="collapse" data-target="#navbar-nav" 
-                            aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span><i class="fas fa-bars"></i></span>
+                        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+                            data-target="#navbar-nav" aria-controls="navbar-nav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="dark-blue-text"><i class="fas fa-bars"></i></span>
                         </button>
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav text-uppercase">
+                            <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
                                 </li>
                                 <li class="nav-item active">
                                     <a class="nav-link tm-nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
-                                </li>                            
-                                <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
                                 </li>
-                            </ul>                            
-                        </div>                        
+                            </ul>
+                        </div>
                     </nav>
                 </div>
             </div>
-            
-            <div class="tm-row">
-                <div class="tm-col-left"></div>
-                <main class="tm-col-right">
-                    <section class="tm-content tm-about">
-                        <h2 class="mb-5 tm-content-title">About Diagoona Template</h2>
-                        <hr class="mb-4">
-                        <div class="media my-3">
-                            <i class="fas fa-shapes fa-3x p-3 mr-4"></i>
-                            <div class="media-body">
-                                <p>Cras quam urna, interdum at posuere ac, tincidunt ut ipsum. Nam condimentum placerat enim. Nullam euismod sapien.</p>
-                            </div> 
-                        </div>
-                        <div class="media my-3">
-                            <i class="fas fa-draw-polygon fa-3x p-3 mr-4"></i>
-                            <div class="media-body">
-                                <p>Nunc id hendrerit nunc. Etiam ultricies arcu sem, vel dapibus lacus lacinia quis. Nunc auctor placerat nisi ac ultrices.</p>
-                            </div> 
-                        </div>
-                        <div class="media my-3">
-                            <i class="fab fa-creative-commons-share fa-3x p-3 mr-4"></i>
-                            <div class="media-body">
-                                <p>Vestibulum imperdiet hendrerit nibh. Integer sit amet lacus et nunc auctor tincidunt eu ac sapien. Ut suscipit velit eget faucibus finibus.</p>
-                            </div> 
-                        </div>
-                        <div class="media my-3">
-                            <i class="fas fa-bookmark fa-3x p-3 mr-4"></i>
-                            <div class="media-body">
-                                <p>Prasent eget enim vitae sapien egestas aliquet non quis neque. Duis pharetra varius massa, ut bibendum tortor sodales ac.</p>
-                            </div> 
-                        </div>                        
-                    </section>
-                </main>
+        </div>
+    </div>
+    <div class="container-fluid mt-7">
+        <div class="row mb-4">
+            <section class="col-lg-4 mb-8 tm-px-3">
+                <div class="tm-box-bordered p-5">
+                    <h3 class="tm-title-gray mb-3">Message from the CEO</h3>
+                    <hr class="mb-4 tm-hr tm-hr-s">
+                    <p class="mb-4">Donec convallis orci id scelerisque convallis. Suspendisse varius sapien mauris.
+                        Proin accumsan.</p>
+                    <p class="mb-5">Quisque accumsan lorem sed bibendum vehicula. Aenean gravida, nunc ac bibendum
+                        bibendum.</p>
+                    <div class="text-right">
+                        <a href="#" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </section>
+            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
+                <figure class="tm-about-person-layout">
+                    <img src="img/about-01.jpg" alt="Image" class="img-fluid mb-5">
+                    <figcaption>
+                        <h3 class="mb-4">
+                            <span class="text-primary">Erik Morris</span>&nbsp;
+                            <span class="small tm-text-gray">(Founder and CEO)</span>
+                        </h3>
+                        <p>Quisque lacinia arcu sit amet est sollicitudin, ut hendrerit augue egestas. Donec accumsan
+                            justo sit amet orci interdum.</p>
+                    </figcaption>
+                </figure>
             </div>
-        </div>        
-
-        <div class="tm-row">
-            <div class="tm-col-left text-center">            
-                <ul class="tm-bg-controls-wrapper">
-                    <li class="tm-bg-control active" data-id="0"></li>
-                    <li class="tm-bg-control" data-id="1"></li>
-                    <li class="tm-bg-control" data-id="2"></li>
-                </ul>            
-            </div>        
-            <div class="tm-col-right tm-col-footer">
-                <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2020 Diagoona Co. 
-                    
-                    | Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-                </footer>
-            </div>   
-        </div>        
-
-        <!-- Diagonal background design -->
-        <div class="tm-bg">
-            <div class="tm-bg-left"></div>
-            <div class="tm-bg-right"></div>
+            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
+                <figure class="tm-about-person-layout">
+                    <img src="img/about-02.jpg" alt="Image" class="img-fluid mb-5">
+                    <figcaption>
+                        <h3 class="mb-4">
+                            <span class="text-primary">Michael Owen</span>&nbsp;
+                            <span class="small tm-text-gray">(Co-founder / CTO)</span>
+                        </h3>
+                        <p>In bibendum dignissim nulla, vitae rutrum enim interdum quis. Quisque erat velit, gravida
+                            quis lectus sit amet, mattis ullamcorper diam.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
+                <figure class="effect-milo tm-about-person tm-about-person-layout">
+                    <img src="img/about-03.jpg" alt="Image" class="img-fluid">
+                    <figcaption>
+                        <h2><span>Mary Kay</span>&nbsp;&nbsp;(Marketing Director)</h2>
+                        <p class="mb-4">Manages the marketing function with emphasis on championing the brand and
+                            expanding the customer base.</p>
+                        <p>
+                            <a href="https://linkedin.com" class="tm-social-link">
+                                <i class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                            <a href="https://twitter.com" class="tm-social-link">
+                                <i class="fab fa-twitter fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                            <a href="https://youtube.com" class="tm-social-link">
+                                <i class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                        </p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
+                <figure class="effect-milo tm-about-person tm-about-person-layout">
+                    <img src="img/about-04.jpg" alt="Image" class="img-fluid">
+                    <figcaption>
+                        <h2><span>Jen Terry</span>&nbsp;&nbsp;(Finance Director)</h2>
+                        <p class="mb-4">Plans and manages all large scale financial functions of the business.</p>
+                        <p>
+                            <a href="https://linkedin.com" class="tm-social-link">
+                                <i class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                            <a href="https://twitter.com" class="tm-social-link">
+                                <i class="fab fa-twitter fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                            <a href="https://youtube.com" class="tm-social-link">
+                                <i class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                        </p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
+                <figure class="effect-milo tm-about-person tm-about-person-layout">
+                    <img src="img/about-05.jpg" alt="Image" class="img-fluid">
+                    <figcaption>
+                        <h2><span>Levi Moore</span>&nbsp;&nbsp;(Creative Director)</h2>
+                        <p class="mb-4">Implements concepts, guidelines and strategies in various creative projects and
+                            oversees them to completion</p>
+                        <p>
+                            <a href="https://linkedin.com" class="tm-social-link">
+                                <i class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                            <a href="https://twitter.com" class="tm-social-link">
+                                <i class="fab fa-twitter fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                            <a href="https://youtube.com" class="tm-social-link">
+                                <i class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"></i>
+                            </a>
+                        </p>
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <div id="parallax-3" class="parallax-window parallax-window-2" data-parallax="scroll"
+        data-image-src="img/biz-oriented-footer-3.jpg">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="tm-overlay p-5 mx-auto text-center">
+                        <p class="mb-5 text-white">Here is a text paragraph to join our team. This is a parallax image
+                            background section. Phasellus interdum lobortis ultrices. Cras nulla nulla, fermentum vel ligula in.</p>
+                        <a href="#" class="btn btn-primary">Join Our Team</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
+    <div class="container-fluid mt-7">
+        <div class="row">
+            <div class="col-lg-5 col-md-6 mb-4">
+                <h3 class="tm-title-gray mb-4">About the business oriented</h3>
+                <hr class="mb-5 tm-hr">
+                <p class="mb-5">
+            Business Oriented Template is free HTML CSS layout made for your corporate or <a href="https://templatemo.com/tag/digital-marketing" target="_blank">digital marketing</a> websites. You can download, edit, and apply this template. </p>
+                <p class="mb-5">
+                    If you wish to support us via PayPal, feel free to <a href="https://templatemo.com/contact" target="_blank">contact us</a>. Please do not re-distribute the
+                template ZIP file on any template collection website. Thank you. </p>
+            </div>
+            <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
+                <h3 class="tm-title-gray mb-4">History of our company</h3>
+                <hr class="mb-5 tm-hr">
+                <p class="mb-5">
+                    Aenean placerat neque fermentum diam malesuada, eget pretium felis elementum. Ut aliquam imperdiet
+                    velit quis imperdiet. Aliquam facilisis commodo tristique.
+                </p>
+                <p class="mb-5">
+                    Nam feugiat, sem vitae mollis auctor, est dolor suscipit massa, vitae consectetur erat elit vel dui.
+                    Phasellus pellentesque in urna at imperdiet. Nulla euismod nibh bibendum.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container-fluid">
+        <div class="row">
+            <p class="col-lg-9 col-md-8 mb-5 mb-md-0">
+                Copyright &copy; 2020 <span class="tm-text-primary">Business Oriented</span>
+                - designed by <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-link-primary">TemplateMo</a>
+            </p>
+            <div class="col-lg-3 col-md-4 text-right">
+                <a rel="nofollow" target="_blank" href="https://fb.com/templatemo" class="tm-social-link">
+                    <i class="fab fa-facebook fa-2x tm-social-icon"></i>
+                </a>
+                <a href="https://twitter.com" class="tm-social-link">
+                    <i class="fab fa-twitter fa-2x tm-social-icon"></i>
+                </a>
+                <a href="https://linkedin.com" class="tm-social-link">
+                    <i class="fab fa-linkedin fa-2x tm-social-icon"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.backstretch.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <script src="js/parallax.min.js"></script> <!-- https://pixelcog.github.io/parallax.js/ -->
+    <script src="js/tooplate-script.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#parallax-1').parallax({ imageSrc: 'img/biz-oriented-header.jpg' });
+            $('#parallax-3').parallax({ imageSrc: 'img/biz-oriented-footer-3.jpg' });
+        });
+    </script>
 </body>
 </html>
