--- a/contact.html
+++ b/contact.html
@@ -5,110 +5,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Diagoona Template - Contact page</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
+    <title>Business Oriented - Contact Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" /> <!-- https://fonts.google.com/ -->    
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
-    <link href="css/templatemo-diagoona.css" rel="stylesheet" />
+    <link href="css/templatemo-business-oriented.css" rel="stylesheet" />
+</head>
 <!--
 
-TemplateMo 550 Diagoona
+TemplateMo 549 Business Oriented
 
-https://templatemo.com/tm-550-diagoona
+https://templatemo.com/tm-549-business-oriented
 
 -->
-</head>
 <body>
-    <div class="tm-container">
-        <div>
-            <div class="tm-row pt-4">
-                <div class="tm-col-left">
-                    <div class="tm-site-header media">
-                        <i class="fas fa-umbrella-beach fa-3x mt-1 tm-logo"></i>
-                        <div class="media-body">
-                            <h1 class="tm-sitename text-uppercase">diagoona</h1>
-                            <p class="tm-slogon">new bootstrap template</p>
-                        </div>        
+    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/biz-oriented-header.jpg">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="tm-logo">
+                        <i class="fas fa-industry fa-5x mr-5"></i>
+                        <span class="text-uppercase tm-logo-text">Business Oriented</span>
                     </div>
                 </div>
-                <div class="tm-col-right">
+            </div>
+        </div>
+    </div>
+    <div class="tm-nav-container-outer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
                     <nav class="navbar navbar-expand-lg" id="tm-main-nav">
-                        <button class="navbar-toggler toggler-example mr-0 ml-auto" type="button" 
-                            data-toggle="collapse" data-target="#navbar-nav" 
-                            aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span><i class="fas fa-bars"></i></span>
+                        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+                            data-target="#navbar-nav" aria-controls="navbar-nav" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="dark-blue-text"><i class="fas fa-bars"></i></span>
                         </button>
-                        <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav text-uppercase">
+                        <div class="collapse navbar-collapse tm-nav" id="navbar-nav">                            
+                            <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
                                     <a class="nav-link tm-nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="about.html">About</a>
+                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
-                                </li>                            
+                                    <a class="nav-link tm-nav-link" href="about.html">About</a>
+                                </li>
                                 <li class="nav-item active">
                                     <a class="nav-link tm-nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
                                 </li>
-                            </ul>                            
-                        </div>                        
+                            </ul>
+                        </div>
                     </nav>
                 </div>
             </div>
-            
-            <div class="tm-row">
-                <div class="tm-col-left"></div>
-                <main class="tm-col-right tm-contact-main"> <!-- Content -->
-                    <section class="tm-content tm-contact">
-                        <h2 class="mb-4 tm-content-title">Contact Us</h2>
-                        <p class="mb-85">Etiam et egestas arcu. Fusce congue quis elit vitae commodo. Cras neque mauris, vehicula in ipsum sit amet, faucibus aliquam arcu.</p>
-                        <form id="contact-form" action="" method="POST">
-                            <div class="form-group mb-4">
-                                <input type="text" name="name" class="form-control" placeholder="Name" required="" />
-                            </div>
-                            <div class="form-group mb-4">
-                                <input type="email" name="email" class="form-control" placeholder="Email" required="" />
-                            </div>
-                            <div class="form-group mb-5">
-                                <textarea rows="6" name="message" class="form-control" placeholder="Message..." required=""></textarea>
-                            </div>
-                            <div class="text-right">
-                                <button type="submit" class="btn btn-big btn-primary">Send It</button>
-                            </div>
-                        </form>
-                    </section>
-                </main>
-            </div>
-        </div>        
-
-        <div class="tm-row">
-            <div class="tm-col-left text-center">            
-                <ul class="tm-bg-controls-wrapper">
-                    <li class="tm-bg-control active" data-id="0"></li>
-                    <li class="tm-bg-control" data-id="1"></li>
-                    <li class="tm-bg-control" data-id="2"></li>
-                </ul>            
-            </div>        
-            <div class="tm-col-right tm-col-footer">
-                <footer class="tm-site-footer text-right">
-                    <p class="mb-0">Copyright 2020 Diagoona Co. 
-                    
-                    | Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-                </footer>
-            </div>  
-        </div>
-
-        <div class="tm-bg"> <!-- Diagonal background design -->
-            <div class="tm-bg-left"></div>
-            <div class="tm-bg-right"></div>
         </div>
     </div>
 
+    <div class="container-fluid mt-7 mb-25">
+        <div class="row">
+            <div class="col-12">
+                <section class="tm-contact-form-box mx-auto mb-7">
+                    <h3 class="tm-title-gray mb-4 text-center">Contact Information</h3>
+                    <hr class="mb-8 tm-hr tm-hr-s mx-auto">
+                    <form id="contact-form" action="" method="POST" class="tm-contact-form">
+                        <div class="form-group">
+                            <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required />
+                        </div>
+                        <div class="form-group">
+                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required />
+                        </div>
+                        <div class="form-group">
+                            <select class="form-control" id="contact-select" name="inquiry">
+                                <option value="-">Subject</option>
+                                <option value="sales">Sales &amp; Marketing</option>
+                                <option value="creative">Creative Design</option>
+                                <option value="uiux">UI / UX</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required=></textarea>
+                        </div>
+
+                        <div class="form-group mb-0">
+                            <button type="submit" class="btn btn-primary rounded-0 d-block mx-auto">Submit</button>
+                        </div>
+                    </form>
+                </section>
+                <section class="tm-address-box mx-auto">
+                    <h3 class="tm-title-gray mb-4 text-center">Our Address</h3>
+                    <hr class="mb-5 tm-hr tm-hr-s mx-auto">
+                    <p class="mb-8 mx-auto text-center tm-address-text">Ut aliquam impoerdiet velit quis imperdiet. Aliquam facilisis commodo tristique. Nam feugiat, sem vitae mollis auctor, est dolor suscipit massa, vitae consectetur erat elit vel dui.</p>
+                    <div class="mapouter mb-60">
+                        <div class="gmap_canvas">
+                            <iframe width="100%" height="520" id="gmap_canvas"
+                                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        </div>
+                    </div>
+                    <p class="mx-auto text-center tm-address-text">Aenean id posuere dui. Sed luctus luctus quam at blanbit. Aenean molestie lacinia mauris sed vestibulum. Praesent laoreet commodo sem eget fermentum.</p>
+                </section>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container-fluid">
+        <div class="row">
+            <p class="col-lg-9 col-md-8 mb-5 mb-md-0">
+                Copyright &copy; 2020
+                <span class="tm-text-primary">Business Oriented</span>
+                - designed by <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-link-primary">TemplateMo</a>
+            </p>
+            <div class="col-lg-3 col-md-4 text-right">
+                <a rel="nofollow" target="_blank" href="https://fb.com/templatemo" class="tm-social-link">
+                    <i class="fab fa-facebook fa-2x tm-social-icon"></i>
+                </a>
+                <a href="https://twitter.com" class="tm-social-link">
+                    <i class="fab fa-twitter fa-2x tm-social-icon"></i>
+                </a>
+                <a href="https://linkedin.com" class="tm-social-link">
+                    <i class="fab fa-linkedin fa-2x tm-social-icon"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.backstretch.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <script src="js/parallax.min.js"></script> <!-- https://pixelcog.github.io/parallax.js/ -->
+    <script src="js/tooplate-script.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#parallax-1').parallax({ imageSrc: 'img/biz-oriented-header.jpg' });
+        });
+    </script>
 </body>
 </html>
