copy pasted from doc

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Business Oriented HTML Template</title>
+    <title>FIFA 2022 Controversy</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
       rel="stylesheet"
@@ -49,21 +49,23 @@ https://templatemo.com/tm-549-business-oriented
               <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link tm-nav-link" href="index.html">Home</a>
+                    <a class="nav-link tm-nav-link" href="index.html"
+                      >Sports and Culture</a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link tm-nav-link" href="services.html"
-                      >Services</a
+                      >Perspective Taking</a
                     >
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link tm-nav-link" href="about.html"
-                      >About <span class="sr-only">(current)</span></a
+                      >Story Telling <span class="sr-only">(current)</span></a
                     >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link tm-nav-link" href="contact.html"
-                      >Contact</a
+                      >Collaboration</a
                     >
                   </li>
                 </ul>
@@ -73,206 +75,28 @@ https://templatemo.com/tm-549-business-oriented
         </div>
       </div>
     </div>
-    <div class="container-fluid mt-7">
-      <div class="row mb-4">
-        <section class="col-lg-4 mb-8 tm-px-3">
-          <div class="tm-box-bordered p-5">
-            <h3 class="tm-title-gray mb-3">Message from the CEO</h3>
-            <hr class="mb-4 tm-hr tm-hr-s" />
-            <p class="mb-4">
-              Donec convallis orci id scelerisque convallis. Suspendisse varius
-              sapien mauris. Proin accumsan.
-            </p>
-            <p class="mb-5">
-              Quisque accumsan lorem sed bibendum vehicula. Aenean gravida, nunc
-              ac bibendum bibendum.
-            </p>
-            <div class="text-right">
-              <a href="#" class="btn btn-primary">Read More</a>
-            </div>
-          </div>
-        </section>
-        <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-          <figure class="tm-about-person-layout">
-            <img src="img/about-01.jpg" alt="Image" class="img-fluid mb-5" />
-            <figcaption>
-              <h3 class="mb-4">
-                <span class="text-primary">Erik Morris</span>&nbsp;
-                <span class="small tm-text-gray">(Founder and CEO)</span>
-              </h3>
-              <p>
-                Quisque lacinia arcu sit amet est sollicitudin, ut hendrerit
-                augue egestas. Donec accumsan justo sit amet orci interdum.
-              </p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-          <figure class="tm-about-person-layout">
-            <img src="img/about-02.jpg" alt="Image" class="img-fluid mb-5" />
-            <figcaption>
-              <h3 class="mb-4">
-                <span class="text-primary">Michael Owen</span>&nbsp;
-                <span class="small tm-text-gray">(Co-founder / CTO)</span>
-              </h3>
-              <p>
-                In bibendum dignissim nulla, vitae rutrum enim interdum quis.
-                Quisque erat velit, gravida quis lectus sit amet, mattis
-                ullamcorper diam.
-              </p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-          <figure class="effect-milo tm-about-person tm-about-person-layout">
-            <img src="img/about-03.jpg" alt="Image" class="img-fluid" />
-            <figcaption>
-              <h2><span>Mary Kay</span>&nbsp;&nbsp;(Marketing Director)</h2>
-              <p class="mb-4">
-                Manages the marketing function with emphasis on championing the
-                brand and expanding the customer base.
-              </p>
-              <p>
-                <a href="https://linkedin.com" class="tm-social-link">
-                  <i
-                    class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-                <a href="https://twitter.com" class="tm-social-link">
-                  <i
-                    class="fab fa-twitter fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-                <a href="https://youtube.com" class="tm-social-link">
-                  <i
-                    class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-              </p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-          <figure class="effect-milo tm-about-person tm-about-person-layout">
-            <img src="img/about-04.jpg" alt="Image" class="img-fluid" />
-            <figcaption>
-              <h2><span>Jen Terry</span>&nbsp;&nbsp;(Finance Director)</h2>
-              <p class="mb-4">
-                Plans and manages all large scale financial functions of the
-                business.
-              </p>
-              <p>
-                <a href="https://linkedin.com" class="tm-social-link">
-                  <i
-                    class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-                <a href="https://twitter.com" class="tm-social-link">
-                  <i
-                    class="fab fa-twitter fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-                <a href="https://youtube.com" class="tm-social-link">
-                  <i
-                    class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-              </p>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-8 tm-px-3">
-          <figure class="effect-milo tm-about-person tm-about-person-layout">
-            <img src="img/about-05.jpg" alt="Image" class="img-fluid" />
-            <figcaption>
-              <h2><span>Levi Moore</span>&nbsp;&nbsp;(Creative Director)</h2>
-              <p class="mb-4">
-                Implements concepts, guidelines and strategies in various
-                creative projects and oversees them to completion
-              </p>
-              <p>
-                <a href="https://linkedin.com" class="tm-social-link">
-                  <i
-                    class="fab fa-linkedin fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-                <a href="https://twitter.com" class="tm-social-link">
-                  <i
-                    class="fab fa-twitter fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-                <a href="https://youtube.com" class="tm-social-link">
-                  <i
-                    class="fab fa-youtube fa-15x tm-social-icon tm-social-icon-2"
-                  ></i>
-                </a>
-              </p>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-    </div>
-    <div
-      id="parallax-3"
-      class="parallax-window parallax-window-2"
-      data-parallax="scroll"
-      data-image-src="img/biz-oriented-footer-3.jpg"
-    >
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <div class="tm-overlay p-5 mx-auto text-center">
-              <p class="mb-5 text-white">
-                Here is a text paragraph to join our team. This is a parallax
-                image background section. Phasellus interdum lobortis ultrices.
-                Cras nulla nulla, fermentum vel ligula in.
-              </p>
-              <a href="#" class="btn btn-primary">Join Our Team</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+   
+    <div class="container-fluid mt-7" style="width:60vw">
+      <div class="row mb-6" style="width:60vw">
+        <section class="col-lg-6 mb-lg-0 mb-5" style="width:60vw">
+          <div class="tm-intro" style="width:60vw">
+            <h3 class="tm-title-gray mb-4" style="width:60vw">
+              Story Telling
+            </h3>
+            <hr class="mb-5 tm-hr" / style="width:60vw">
+            <p class="mb-5" style="width:60vw">
+              This page of the wiki should offer the initial brainstorm of the story that the VR experience is going to tell. This section will see a lot of revision over the course of the semester, hence the choice of initial brainstorm. This section should be drawing from week 3 and week 4 in our conversations about storytelling. 
+<br><br>
+              This page of the wiki should answer the following questions:
+ <br><br>
+Our story will detail the experience of the migrant workers who came to Qatar to construct the infrastructure for the 2022 FIFA World Cup. Starting from exploring what pushed so many people to leave their countries and work in terrible conditions for low pay in a foreign country to the workers viewing the products of their labor by the time the World Cup starts, we hope to give a comprehensive retelling of the stories of the workers. We will focus on the day-to-day lives of the workers, from showing their living conditions to viewing the type of work they did on a daily basis over the course of many years. The story of Qatar’s migrant workers is more nuanced than just some workers being treated poorly. Migrant workers in one of the world’s richest countries, which make up almost 90% of the country’s labor force, have been subjected to human rights violations that had generally been rid from society for decades if not centuries. In some cases workers were not allowed to quit the job or even leave the camp that they were staying at - meaning that the next edition of the world’s most-viewed tournament was built off the backs of forced laborers who - time-after-time - realized that they were being taken advantage even more and more.
+In terms of coverage of the Qatar World Cup, the treatment of the migrant workers has been one of the main arguments amongst a plethora of complaints against a Qatari regime that has been accused of using the World Cup to ‘sportswash’. The general media coverage of Qatar’s hosting of the World Cup has been overwhelmingly negative, with there even being calls to strip Qatar of their hosting status. However, no significant action has been taken against the Qatari government or FIFA for allowing people to work in what could be considered subhuman conditions. Like many issues that captivate the attention of the world, attention gradually fades away as the media and the general public move on to another issue, leading to there being very little opposition to Qatar’s hosting of the World Cup today.
+We hope that the VR experience will evoke strong feelings from the viewer about the plight of the migrant workers, and that it will hopefully make people think at least twice about the terrible things that happened in order to create this global sporting spectacle. And potentially, it could motivate the viewer to take some form of action in support of the workers or against Qatar/FIFA. 
 
-    <div class="container-fluid mt-7">
-      <div class="row">
-        <div class="col-lg-5 col-md-6 mb-4">
-          <h3 class="tm-title-gray mb-4">About the business oriented</h3>
-          <hr class="mb-5 tm-hr" />
-          <p class="mb-5">
-            Business Oriented Template is free HTML CSS layout made for your
-            corporate or
-            <a
-              href="https://templatemo.com/tag/digital-marketing"
-              target="_blank"
-              >digital marketing</a
-            >
-            websites. You can download, edit, and apply this template.
-          </p>
-          <p class="mb-5">
-            If you wish to support us via PayPal, feel free to
-            <a href="https://templatemo.com/contact" target="_blank"
-              >contact us</a
-            >. Please do not re-distribute the template ZIP file on any template
-            collection website. Thank you.
-          </p>
-        </div>
-        <div class="col-lg-6 col-md-6 mb-4 mr-0 ml-auto">
-          <h3 class="tm-title-gray mb-4">History of our company</h3>
-          <hr class="mb-5 tm-hr" />
-          <p class="mb-5">
-            Aenean placerat neque fermentum diam malesuada, eget pretium felis
-            elementum. Ut aliquam imperdiet velit quis imperdiet. Aliquam
-            facilisis commodo tristique.
-          </p>
-          <p class="mb-5">
-            Nam feugiat, sem vitae mollis auctor, est dolor suscipit massa,
-            vitae consectetur erat elit vel dui. Phasellus pellentesque in urna
-            at imperdiet. Nulla euismod nibh bibendum.
-          </p>
-        </div>
+            </p>
+          </div>
+         </section>
       </div>
-    </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
