--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Business Oriented - Contact Page</title>
+    <title>FIFA 2022 Controversy</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet" /> <!-- https://fonts.google.com/ -->    
     <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
     <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
@@ -34,16 +34,16 @@ https://templatemo.com/tm-549-business-oriented
                         <div class="collapse navbar-collapse tm-nav" id="navbar-nav">                            
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="index.html">Home</a>
+                                    <a class="nav-link tm-nav-link" href="index.html">Sports and Culture</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
+                                    <a class="nav-link tm-nav-link" href="services.html">Perspective Taking</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="about.html">About</a>
+                                    <a class="nav-link tm-nav-link" href="about.html">Story Telling</a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link tm-nav-link" href="contact.html">Collaboration <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -53,53 +53,23 @@ https://templatemo.com/tm-549-business-oriented
         </div>
     </div>
 
-    <div class="container-fluid mt-7 mb-25">
-        <div class="row">
-            <div class="col-12">
-                <section class="tm-contact-form-box mx-auto mb-7">
-                    <h3 class="tm-title-gray mb-4 text-center">Contact Information</h3>
-                    <hr class="mb-8 tm-hr tm-hr-s mx-auto">
-                    <form id="contact-form" action="" method="POST" class="tm-contact-form">
-                        <div class="form-group">
-                            <input type="text" name="name" class="form-control rounded-0" placeholder="Name" required />
-                        </div>
-                        <div class="form-group">
-                            <input type="email" name="email" class="form-control rounded-0" placeholder="Email" required />
-                        </div>
-                        <div class="form-group">
-                            <select class="form-control" id="contact-select" name="inquiry">
-                                <option value="-">Subject</option>
-                                <option value="sales">Sales &amp; Marketing</option>
-                                <option value="creative">Creative Design</option>
-                                <option value="uiux">UI / UX</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <textarea rows="8" name="message" class="form-control rounded-0" placeholder="Message" required=></textarea>
-                        </div>
-
-                        <div class="form-group mb-0">
-                            <button type="submit" class="btn btn-primary rounded-0 d-block mx-auto">Submit</button>
-                        </div>
-                    </form>
-                </section>
-                <section class="tm-address-box mx-auto">
-                    <h3 class="tm-title-gray mb-4 text-center">Our Address</h3>
-                    <hr class="mb-5 tm-hr tm-hr-s mx-auto">
-                    <p class="mb-8 mx-auto text-center tm-address-text">Ut aliquam impoerdiet velit quis imperdiet. Aliquam facilisis commodo tristique. Nam feugiat, sem vitae mollis auctor, est dolor suscipit massa, vitae consectetur erat elit vel dui.</p>
-                    <div class="mapouter mb-60">
-                        <div class="gmap_canvas">
-                            <iframe width="100%" height="520" id="gmap_canvas"
-                                src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                        </div>
-                    </div>
-                    <p class="mx-auto text-center tm-address-text">Aenean id posuere dui. Sed luctus luctus quam at blanbit. Aenean molestie lacinia mauris sed vestibulum. Praesent laoreet commodo sem eget fermentum.</p>
-                </section>
-            </div>
-        </div>
-    </div>
-
+    <div class="container-fluid mt-7" style="width:60vw">
+      <div class="row mb-6" style="width:60vw">
+        <section class="col-lg-6 mb-lg-0 mb-5" style="width:60vw">
+          <div class="tm-intro" style="width:60vw">
+            <h3 class="tm-title-gray mb-4" style="width:60vw">
+              Collaboration
+            </h3>
+            <hr class="mb-5 tm-hr" / style="width:60vw">
+            <p class="mb-5" style="width:60vw">
+              This wiki will focus on documenting the collaborative process. An important aspect of this section will be the group charter that you will draft together. 
+              <br><br>
+              This section can include any number of notes, meeting minutes, group brainstorming sessions, group drawings, etc. It should also include a clear outline of the division of labor for each staging post in the project. The section should be a reflection of the collaboration you are engaging and the iterative process of creating the various aspects of the project in a collaborative setting. 
+              
+            </p>
+          </div>
+         </section>
+      </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
