--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sports and Culture</title>
+    <title>FIFA 2022 Controversy</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
@@ -50,20 +50,20 @@ https://templatemo.com/tm-549-business-oriented
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
                     <a class="nav-link tm-nav-link" href="#"
-                      >Home <span class="sr-only">(current)</span></a
+                      >Sports and Culture <span class="sr-only">(current)</span></a
                     >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link tm-nav-link" href="services.html"
-                      >Services</a
+                      >Perspective Taking</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link tm-nav-link" href="about.html">About</a>
+                    <a class="nav-link tm-nav-link" href="about.html">Story Telling</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link tm-nav-link" href="contact.html"
-                      >Contact</a
+                      >Collaboration</a
                     >
                   </li>
                 </ul>
@@ -193,6 +193,78 @@ Develop the Game, Touch the World, Build a Better Future
           </section>
         </div>
 
+        <div class="container-fluid mt-7">
+          <div class="row mb-6">
+            <section class="col-lg-6 mb-lg-0 mb-5">
+              <div class="tm-intro">
+                <h3 class="tm-title-gray mb-4">
+                  What is (are) the cultural context(s) that the controversy is occurring/occurred within? 
+                </h3>
+                <hr class="mb-5 tm-hr" />
+                <p class="mb-5">
+                  The cultural context that the controversy is occurring is that the Indian government claims that everything is fine; that the deaths are not an abnormal number caused by poor working conditions. They provided the statement in a press conference that “Considering the large size of our community, the number of deaths is quite normal”(“Have 1,200 World Cup workers really died in Qatar?)
+                </p>
+                <p class="mb-5">
+                  From what the Indian Government says about the issue, they compare proportions and comparisons of death to India and UK and it is normal
+                  
+                </p>
+                <p class="mb-5">
+                  Whether what the Indian government is true or not, from our perspective, 1200 deaths is an alarming number, might not be for them. 
+                </p>
+              </div>
+            </section>
+            <section class="col-lg-6 mb-lg-0 mb-5">
+              <div class="tm-intro">
+                <h3 class="tm-title-gray mb-4">
+                  What do we know about this (these) culture(s)?
+  
+                </h3>
+                <hr class="mb-5 tm-hr" />
+                <p class="mb-5">
+                  Foreign workers
+  Toiling and suffering, aiming to construct something for a joyous event
+  Being forced to work to survive after escaping their country
+  Having hopes of a better life crushed
+  "Migrant workers often go to Qatar in the hope of giving their families a better life - instead many people return home penniless after spending months chasing their wages, with too little help from the systems that are supposed to protect them." (BBC, 2019)
+  Qatar government
+  Deciding the most efficient way to build the FIFA stadium
+  Making the decision to exploit migrant workers
+  Acting proud of their plan 
+  Qataris
+  Ignorance of the situation for some
+  Indifference for some
+  Fervent protest for others
+  FIFA
+  Conflict between the FIFA mission 
+  Develop the Game, Touch the World, Build a Better Future
+  
+                </p>
+              </div>
+            </section>
+          </div>
+
+          <div class="container-fluid mt-7">
+            <div class="row mb-6">
+              <section class="col-lg-6 mb-lg-0 mb-5">
+                <div class="tm-intro">
+                  <h3 class="tm-title-gray mb-4">
+                    What is the conflict over? This could be economics, identity, politics, religions, and the list goes on. 
+
+                  </h3>
+                  <hr class="mb-5 tm-hr" />
+                  <p class="mb-5">
+                    The cultural context that the controversy is occurring is that the Indian government claims that everything is fine; that the deaths are not an abnormal number caused by poor working conditions. They provided the statement in a press conference that “Considering the large size of our community, the number of deaths is quite normal”(“Have 1,200 World Cup workers really died in Qatar?)
+                  </p>
+                  <p class="mb-5">
+                    From what the Indian Government says about the issue, they compare proportions and comparisons of death to India and UK and it is normal
+                    
+                  </p>
+                  <p class="mb-5">
+                    Whether what the Indian government is true or not, from our perspective, 1200 deaths is an alarming number, might not be for them. 
+                  </p>
+                </div>
+              </section>
+            </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
