--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Business Oriented - Services</title>
+    <title>FIFA 2022 Controversy</title>
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans"
       rel="stylesheet"
@@ -49,19 +49,24 @@ https://templatemo.com/tm-549-business-oriented
               <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link tm-nav-link" href="index.html">Home</a>
+                    <a class="nav-link tm-nav-link" href="index.html"
+                      >Sports and Culture</a
+                    >
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link tm-nav-link" href="#"
-                      >Services <span class="sr-only">(current)</span></a
+                      >Perspective Taking
+                      <span class="sr-only">(current)</span></a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link tm-nav-link" href="about.html">About</a>
+                    <a class="nav-link tm-nav-link" href="about.html"
+                      >Story Telling</a
+                    >
                   </li>
                   <li class="nav-item">
                     <a class="nav-link tm-nav-link" href="contact.html"
-                      >Contact</a
+                      >Collaboration</a
                     >
                   </li>
                 </ul>
@@ -72,171 +77,57 @@ https://templatemo.com/tm-549-business-oriented
       </div>
     </div>
 
-    <div class="container-fluid mt-7">
-      <div class="row mb-6">
-        <div class="col-lg-7 mb-lg-0 mb-5 pr-lg-5">
-          <section class="mb-10">
-            <div>
+      <div class="container-fluid mt-7" style="width:60vw">
+        <div class="row mb-6" style="width:60vw">
+          <section class="col-lg-6 mb-lg-0 mb-5" style="width:60vw">
+            <div class="tm-intro" style="width:60vw">
               <h3 class="tm-title-gray mb-4">
-                Our services for your business growth
+                Perspective Taking
               </h3>
-              <hr class="mb-5 tm-hr" />
-              <p class="mb-5">
-                This is another HTML page for services in Business Oriented
-                Template. You are
-                <span class="tm-text-primary">allowed</span> to use this CSS
-                template for your business or personal website. You are
-                <span class="tm-text-primary">NOT allowed</span> to
-                re-distribute the template ZIP file on any template collection
-                website.
-                <a
-                  href="https://templatemo.com/contact"
-                  class="tm-text-primary-link"
-                  >Contact us</a
-                >
-                for more information about this template.
-              </p>
-              <p class="mb-5">
-                Nulla eget ipsum nec augue semper convallis non a lacus. Integer
-                vel condimentum neque. Fusce sollicitudin arcu et tortor
-                lobortis rhoncus. Morbi accumsan efficitur nunc, in faucibus
-                velit pretium quis. Sed elementum auctor felis eu tristique.
-              </p>
-            </div>
-          </section>
-          <section>
-            <h3 class="tm-title-gray mb-4">Professional Business Services</h3>
-            <hr class="mb-5 tm-hr" />
-            <div class="tm-services-box mb-60">
-              <img
-                src="img/services-2.jpg"
-                alt="Image"
-                class="img-fluid tm-services-img"
-              />
-              <div>
-                <h4 class="tm-text-primary mb-4">
-                  Maecenas molestie varius ipsum
-                </h4>
-                <p class="tm-strategy-text">
-                  Donec mauris eros, suscipit fermentum faucibus sagittis,
-                  dictum eget nulla. Duis maximus porttitor ornare. Maecenas
-                  blandit vestibulum massa at accumsan. Duis ultricies mi id
-                  justo porttitor, et sollicitudin justo vehicula.
-                </p>
-              </div>
-            </div>
-            <div class="tm-services-box mb-5">
-              <img
-                src="img/services-3.jpg"
-                alt="Image"
-                class="img-fluid tm-services-img"
-              />
-              <div>
-                <h4 class="tm-text-primary mb-4">
-                  Sed elementum justo in pulvinar
-                </h4>
-                <p class="tm-strategy-text">
-                  Sed non tellus vestibulum, tincidunt risus a, semper erat.
-                  Aliquam porta leo eget faucibus consectetur. Nam mauris felis,
-                  consectetur non cursus sit amet, pellentesque ac leo. Aliquam
-                  at dolor du velit scelerisque fringilla.
-                </p>
-              </div>
-            </div>
-          </section>
-        </div>
-        <div class="col-lg-5">
-          <img src="img/services-1.jpg" alt="Image" class="img-fluid" />
-          <div class="tm-bg-gray-dark tm-box-2">
-            <h4 class="tm-text-primary tm-h3 mb-4">
-              Fusce sollicitudin arcu et tortor
-            </h4>
-            <p class="mb-5">
-              Cras rhoncus tempor consequat. Donec convallis orci id scelerisque
-              convallis. Suspendisse varius sapien mauris.
-            </p>
-            <p class="mb-5">
-              Quisque accumsan lorem sed bibendum vehicula. Aenean gravida, nunc
-              ac bibendum bibendum.
-            </p>
-            <p>
-              Donec convallis orci id scelerisque convallis. Suspendisse varius
-              sapien mauris. Proin accumsan.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div
-      id="parallax-3"
-      class="parallax-window parallax-window-2"
-      data-parallax="scroll"
-      data-image-src="img/biz-oriented-footer-2.jpg"
-    >
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <div class="tm-overlay tm-bg-black-transparent p-5 ml-auto mr-0">
-              <p class="mb-0 text-white">
-                This is a parallax image background section. Text section box
-                has 50% alpha on black color. Phasellus interdum lobortis
-                ultrices. Cras nulla nulla, fermentum vel ligula in, mollis
-                imperdiet ipsum.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+              <hr class="mb-5 tm-hr" style="width:60vw"/>
+              <p class="mb-5" style="width:60vw">
+                The various sides of the story are the perspectives of the foreign workers, the Qatar government, the Fédération Internationale de Football Association (FIFA), and the non-governmental organizations (NGOs).
+                <br><br>
+The perspective of the foreign workers emphasizes how migrant workers are “in a cycle of abuse” in Qatar (“Reality check: Migrant Workers' Rights with Two Years to the Qatar 2022 World Cup”, n.d.). These workers migrate to Qatar to work to support their families back home. Some of these workers are not paid by the construction firms, others are not allowed to change jobs, others are not allowed to leave Qatar without the permission of their employer, etc (“Reality check: Migrant Workers' Rights with Two Years to the Qatar 2022 World Cup”, n.d.). This makes these foreign workers feel powerless (Kavaler, 2020).
+<br> <br>
+The perspective of the Qatari leaders and government emphasizes their efforts into ending the abuse of migrant workers, to try to de-emphasize the human rights issues occuring in their country. They wanted to host the World Cup for the world to recognize Qatar and it took a while for the elite in Qatar to realize that the only way for Qatar’s reputation to improve is by addressing the current violations of human rights (Kavaler, 2020). They have recently passed various reforms and laws to change the rights of migrant workers (“World Cup 2022: Qatar still failing to protect workers' rights, says Amnesty International”, 2019). For example, the Qatari government has passed labour reforms, signed an agreement with the United Nations’ International Labour Organization, etc (“World Cup 2022: Qatar still failing to protect workers' rights, says Amnesty International”, 2019). However, the Qatar government did not pass these reforms because of local demand. These laws were passed because of international pressure, more specifically from the western public (Kavaler, 2020).
+<br> <br>
+The perspective of FIFA emphasizes that they take “World Cup workers’ rights very seriously”, to de-emphasize the idea that one of their events and one of the largest sporting events in the world is occurring in a place where human rights are currently being violated (“World Cup 2022: Qatar still failing to protect workers' rights, says Amnesty International”, 2019). However, FIFA has acknowledged the issues occurring currently in Qatar and they reassure that they will meet international standards (Peltz-Steele, 2016). FIFA makes clear that they are strongly committed to protect human rights (Peltz-Steele, 2016).
+<br> <br>
+The perspective of NGOs emphasizes the current violations of human rights occurring in Qatar due to the World Cup 2022. Amnesty International and other NGOs have been trying to stop and expose this issue, and have acknowledged some of the changes/efforts made by the Qatari leaders and FIFA. They attempt to protect the rights of these foreign workers and blame this issue on FIFA and the Qatari officials (Kavaler, 2020). These organizations emphasize that there is still a lot to be done to address. This somewhat de-emphasizes the efforts made by the Qatari leaders and FIFA, but NGOs still acknowledge the importance of the changes made so far.
+<br>  <br>
+The perspective that is the focus is the point of view of the foreign workers. It is important for this perspective to be represented because it is an issue in Qatar that was brought up by hosting the World Cup. These large international events bring to light various issues, like violating human rights, that many people are not aware of. Foreign workers are used in Qatar to construct the facilities and participate in other operations necessary to host the World Cup of 2022. These workers are mistreated and abused for this global event and it is important that everybody is aware of the current situation in Qatar. More specifically, the audience for this perspective are the people that are part/involved in the World Cup of 2022.
 
-    <div class="container-fluid mt-7 mb-6">
-      <div class="row">
-        <div class="col-xl-3 col-lg-6 px-xl-4 px-3">
-          <div class="tm-box-3 tm-bg-gray">
-            <div class="text-center">
-              <i class="fas fa-cloud-sun fa-3x mb-8 mt-4"></i>
+              </p>
+
             </div>
-            <p>
-              Nam nulla purus, lobortis ac euismod non, tincidunt eget velit.
-              Nullam bibendum tortor id consectetur auctor.
-            </p>
-          </div>
+          </section>
         </div>
-        <div class="col-xl-3 col-lg-6 px-xl-4 px-3">
-          <div class="tm-box-3 tm-bg-gray">
-            <div class="text-center">
-              <i class="fas fa-hiking fa-3x mb-8 mt-4"></i>
-            </div>
-            <p>
-              Nam nulla purus, lobortis ac euismod non, tincidunt eget velit.
-              Nullam bibendum tortor id consectetur auctor.
-            </p>
+
+        <div class="container-fluid mt-7" style="width:60vw">
+          <div class="row mb-6" style="width:60vw">
+            <section class="col-lg-6 mb-lg-0 mb-5" style="width:60vw">
+              <div class="tm-intro" style="width:60vw">
+                <h3 class="tm-title-gray mb-4">
+                  Bibliography
+                </h3>
+                <hr class="mb-5 tm-hr" style="width:60vw"/>
+                <p class="mb-5" style="width:60vw">
+Kavaler, T. (2020, December 24). Foreign policy is the real Reason Qatar is HOSTING FIFA's World Cup. Retrieved February 16, 2021, from https://themedialine.org/by-region/foreign-policy-is-the-real-reason-qatar-is-hosting-fifas-world-cup/
+<br><br>
+Peltz-Steele, R. J. (2016). The FIFA World Cup, Human Rights Goals and the Gulf Between. University of Massachusetts School of Law Scholarship Repository @ University of Massachusetts School of Law Faculty Publications.
+<br><br>
+Reality check: Migrant Workers' Rights with Two Years to the Qatar 2022 World Cup. (n.d.). Retrieved February 16, 2021, from https://www.amnesty.org/en/latest/campaigns/2019/02/reality-check-migrant-workers-rights-with-two-years-to-qatar-2022-world-cup/#:~:text=Without%20the%20two%20million%20migrant,not%20be%20possible%20in%20Qatar.&text=But%20in%20the%20decade%20since,wages%20and%20excessive%20working%20hours.
+<br><br>
+World Cup 2022: Qatar still failing to protect workers' rights, says Amnesty International. (2019, September 19). Retrieved March 02, 2021, from https://www.bbc.com/sport/football/49747688
+
+                </p>
+  
+              </div>
+            </section>
           </div>
-        </div>
-        <div class="col-xl-3 col-lg-6 px-xl-4 px-3">
-          <div class="tm-box-3 tm-bg-gray">
-            <div class="text-center">
-              <i class="fas fa-tree fa-3x mb-8 mt-4"></i>
-            </div>
-            <p>
-              Nam nulla purus, lobortis ac euismod non, tincidunt eget velit.
-              Nullam bibendum tortor id consectetur auctor.
-            </p>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6 px-xl-4 px-3">
-          <div class="tm-box-3 tm-bg-gray">
-            <div class="text-center">
-              <i class="fas fa-campground fa-3x mb-8 mt-4"></i>
-            </div>
-            <p>
-              Nam nulla purus, lobortis ac euismod non, tincidunt eget velit.
-              Nullam bibendum tortor id consectetur auctor.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+
+
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
